[gd_scene load_steps=2 format=3 uid="uid://breedingpanel"]

[ext_resource type="Script" path="res://scenes/ui/BreedingPanel.gd" id="1"]

[node name="BreedingPanel" type="Panel"]
script = ExtResource("1")
anchors_preset = 3
anchor_left = 0.7
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -220.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Title" type="Label" parent="VBox"]
text = "Tree Breeding"

[node name="Attempts" type="Label" parent="VBox"]
text = "Attempts left: 3"

[node name="ParentRow" type="HBoxContainer" parent="VBox"]
separation = 8

[node name="ParentALabel" type="Label" parent="VBox/ParentRow"]
text = "Parent A"
custom_minimum_size = Vector2(80, 0)

[node name="ParentA" type="OptionButton" parent="VBox/ParentRow"]
size_flags_horizontal = 3

[node name="ParentBLabel" type="Label" parent="VBox/ParentRow"]
text = "Parent B"
custom_minimum_size = Vector2(80, 0)

[node name="ParentB" type="OptionButton" parent="VBox/ParentRow"]
size_flags_horizontal = 3

[node name="Odds" type="Label" parent="VBox"]
text = "Odds: -"

[node name="BreedButton" type="Button" parent="VBox"]
text = "Breed"

[node name="Result" type="Label" parent="VBox"]
text = "Result:"
